# JaxARC

./: .codespellrc  .copier-answers.yml  .gitignore  .pre-commit-config.yaml  .prettierignore  .readthedocs.yaml  AGENTS.md  CITATION.cff  README.md  README_COMPREHENSIVE_DEMO.md  audit_existing_utilities.md  jaxarc_comprehensive_demo.py  noxfile.py  performance_validation_summary.md  pixi.toml  pyproject.toml  pytest.ini  test_jax_compliance.py  test_jaxarc_notebook.py  verify_demo_setup.py
.gemini/: settings.json
.github/: CONTRIBUTING.md  copilot-instructions.md
.github/instructions/: agent.instructions.md  default.instructions.md  docs.instructions.md  product.instructions.md  structure.instructions.md  tech.instructions.md
.github/workflows/: cd.yml  ci.yml
.kiro/hooks/: code-quality-analyzer.kiro.hook  jax-compliance-analysis.kiro.hook  source-docs-sync.kiro.hook
.kiro/steering/: agent.md  docs.md  product.md  structure.md  tech.md
.planning/: batched-logging.md  jax_performance_implementation_plan.md  phase1_implementation_summary.md  simplify-logging.md
benchmarks/: BASELINE_RESULTS.md  README.md  arcle_vs_jaxarc.py  baseline_benchmark.py  benchmark_sps_evolution.py  benchmark_wrapper.py  compare_benchmarks.py  plot_throughput.ipynb  speedup_tables.tex
benchmarks/results/: arcle_vs_jaxarc_cpu_arcle-async_20250915-173558.json  arcle_vs_jaxarc_cpu_arcle-sync_20250911-174928.json  arcle_vs_jaxarc_cpu_arcle-sync_20250915-173558.json  arcle_vs_jaxarc_cpu_jaxarc-jit_20250913-110915.json  arcle_vs_jaxarc_cpu_jaxarc-jit_20250915-135852.json  arcle_vs_jaxarc_cpu_jaxarc-jit_20250916-091636.json  arcle_vs_jaxarc_h100_arcle-async_20250915-153352.json  arcle_vs_jaxarc_h100_arcle-sync_20250915-152434.json  arcle_vs_jaxarc_h100_jaxarc-jit_20250913-144630.json  arcle_vs_jaxarc_h100_jaxarc-jit_20250915-152014.json  arcle_vs_jaxarc_h100_jaxarc-pmap_20250915-121608.json  arcle_vs_jaxarc_h100_jaxarc-pmap_20250915-145505.json  arcle_vs_jaxarc_h100_unroll6_jaxarc-jit_20250913-174506.json  arcle_vs_jaxarc_results.json  arcle_vs_jaxarc_rtx_arcle-async_20250915-194327.json  arcle_vs_jaxarc_rtx_arcle-sync_20250915-173210.json  (+11 more)
conf/: README.md  config.yaml
conf/action/: bbox.yaml  (+4 more)
docs/: ARCLE_JAX_IMPLEMENTATION.md  CONFIG_API_README.md  IMPLEMENTATION_SUMMARY.md  JaxARC_API_Reference.md  KAGGLE_TO_GITHUB_MIGRATION.md  MIGRATION_GUIDE.md  README.md  TROUBLESHOOTING.md  api_reference.md  batch_processing_guide.md  conf.py  config_usage_guide.md  configuration.md  configuration_best_practices.md  configuration_redesign.md  data_format.md  datasets.md  downstream_config_usage.md  enhanced_visualization.md  environment.yml  equinox_jaxtyping_guide.md  export_docs_env.sh  getting-started.md  implementation_roadmap.md  improvements_analysis.md  index.md  jax_optimization_guide.md  jax_testing_patterns.md  jax_troubleshooting_guide.md  logging_system.md  migration_guide.md  myst.yml  new_usage_patterns.md  parser_usage.md  performance_optimization_guide.md  phase1.md  primtive_env.md  replay_analysis_system.md  structured_actions_api.md  technical_implementation_guide.md  (+7 more)
examples/: README.md  action_wrappers_example.py  advanced_config_demo.py  arc-visualization.py  arc_agi_1_usage_example.py  arc_agi_2_usage_example.py  concept_arc_demo.py  conceptarc_usage_example.py  config_api_demo.py  config_factory_demo.py  debug_levels_demo.py  discovery_demo.py  enhanced_config_demo.py  enhanced_visualization_demo.py  enhanced_visualization_examples.py  enhanced_wandb_demo.py  equinox_config_demo.py  equinox_jaxtyping_demo.py  hydra_composition_demo.py  hydra_integration_example.py  logging-showcase.py  memory_optimization_demo.py  miniarc_usage_example.py  random_agent_miniarc.py  registry_bootstrap_demo.py  render_showcase.py  replay_analysis_demo.py  test_config_environments.py  test_jaxarc_notebook.py  visualization_demo.py  visualization_workflows.py  wrappers_overview.py
notebooks/: 00-data.ipynb  01-arc-visualization.py  README.md  action_exploration_visualization.py  action_handler_demo.py  eda_environment_exploration.py  logging-showcase.py  miniarc_demo.py  miniarc_rl_loop.py  random_agent_miniarc.py
scripts/: arc_jax_example.py  arcle_jax_example.py  demo_arc_env.py  demo_arcle_env.py  demo_clean_api.py  demo_parser.py  demo_primitive_env.py  download_dataset.py  download_kaggle_dataset.py  enhanced_visualization_demo.py  full_task_demo.py  test_arc_basic.py  test_arc_jax_performance.py  test_arcle_basic.py  test_arcle_jax_performance.py  test_async_logging_system.py  test_serialization_functionality.py  test_serialization_simple.py  validate_performance_improvements.py  verify_implementation.py
test/: README.md  __init__.py  conftest.py  test_edge_cases_and_errors.py  test_performance_and_robustness.py  test_state.py  test_types.py  test_utils.py
tests/: README.md  TESTING_SUMMARY.md  __init__.py  conftest.py  equinox_test_utils.py  hypothesis_utils.py  jax_test_framework.py  jax_testing_utils.py  performance_testing_summary.md  test_action_handler_integration.py  test_action_handlers.py  test_arc_agi_integration.py  test_arc_env_wrapper.py  test_batch_scalability.py  test_batch_structured_actions.py  test_comprehensive_refactored_components.py  test_comprehensive_task_10_validation.py  test_config_hashability_jit.py  test_decomposed_functions.py  test_decomposed_functions_simple.py  test_download_script.py  test_enhanced_config_integration.py  test_enhanced_config_validation.py  test_enhanced_integration.py  test_enhanced_visualization_async_logger.py  test_enhanced_visualization_basic.py  test_enhanced_visualization_episode_manager.py  test_enhanced_visualization_integration.py  test_enhanced_visualization_performance.py  test_enhanced_visualization_wandb_integration.py  test_enhanced_visualizer.py  test_equinox_config.py  test_equinox_integration.py  test_equinox_integration_comprehensive.py  test_equinox_migration.py  test_equinox_performance.py  test_equinox_state.py  test_filtered_transformations_batch.py  test_foundation_changes.py  test_github_dataset_integrity.py  (+24 more)
(+410 files in other folders)
