[build-system]
requires = ["hatchling>=1.26", "hatch-vcs"]
build-backend = "hatchling.build"


[project]
name = "JaxARC"
authors = [
  { name = "Aadam", email = "aadimator@gmail.com" },
]
description = "MARL environment for ARC dataset in JAX"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Typing :: Typed",
]
dynamic = ["version"]
dependencies = []

[project.urls]
Homepage = "https://github.com/aadimator/JaxARC"
"Bug Tracker" = "https://github.com/aadimator/JaxARC/issues"
Discussions = "https://github.com/aadimator/JaxARC/discussions"
Changelog = "https://github.com/aadimator/JaxARC/releases"


[dependency-groups]
test = [
  "pytest >=6",
  "pytest-cov >=3",
]
dev = [
  { include-group = "test" },
]
docs = [ "jupyter-book>=2.0.0a3",
]


[tool.hatch]
version.source = "vcs"
build.hooks.vcs.version-file = "src/jaxarc/_version.py"

[tool.hatch.envs.default]
# duplicate for now since hatch doesn't support groups yet
dependencies = []
scripts.test = "pytest {args}"


[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = [
  "error",
]
log_cli_level = "INFO"
testpaths = [
  "tests",
]


[tool.coverage]
run.source = ["jaxarc"]
report.exclude_also = [
  '\.\.\.',
  'if typing.TYPE_CHECKING:',
]

[tool.mypy]
files = ["src", "tests"]
python_version = "3.9"
warn_unused_configs = true
strict = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
warn_unreachable = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = "jaxarc.*"
disallow_untyped_defs = true
disallow_incomplete_defs = true


[tool.ruff]

[tool.ruff.lint]
extend-select = [
  "ARG",      # flake8-unused-arguments
  "B",        # flake8-bugbear
  "C4",       # flake8-comprehensions
  "EM",       # flake8-errmsg
  "EXE",      # flake8-executable
  "G",        # flake8-logging-format
  "I",        # isort
  "ICN",      # flake8-import-conventions
  "NPY",      # NumPy specific rules
  "PD",       # pandas-vet
  "PGH",      # pygrep-hooks
  "PIE",      # flake8-pie
  "PL",       # pylint
  "PT",       # flake8-pytest-style
  "PTH",      # flake8-use-pathlib
  "RET",      # flake8-return
  "RUF",      # Ruff-specific
  "SIM",      # flake8-simplify
  "T20",      # flake8-print
  "UP",       # pyupgrade
  "YTT",      # flake8-2020
]
ignore = [
  "PLR09",    # Too many <...>
  "PLR2004",  # Magic value used in comparison
]
isort.required-imports = ["from __future__ import annotations"]
# Uncomment if using a _compat.typing backport
# typing-modules = ["jaxarc._compat.typing"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["T20"]
"noxfile.py" = ["T20"]


[tool.pylint]
py-version = "3.9"
ignore-paths = [".*/_version.py"]
reports.output-format = "colorized"
similarities.ignore-imports = "yes"
messages_control.disable = [
  "design",
  "fixme",
  "line-too-long",
  "missing-module-docstring",
  "missing-function-docstring",
  "wrong-import-position",
]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64"]

[tool.pixi.pypi-dependencies]
JaxARC = { path = ".", editable = true }
jax = {extras = ["cuda12"]}
jaxmarl = { version = ">=0.1.0,<0.2", extras = ["algs"] }

[tool.pixi.activation.env]
JAX_PLATFORMS = "cuda"

[tool.pixi.target.osx.pypi-dependencies]
jax = {extras = ["cpu"]}

[tool.pixi.target.osx.activation.env]
JAX_PLATFORMS = "cpu"

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }
docs = { features = ["docs"], solve-group = "default" }
test = { features = ["test"], solve-group = "default" }

[tool.pixi.dependencies]
tqdm = ">=4.67.1,<5"
typer = ">=0.16.0,<0.17"
pyprojroot = ">=0.3.0,<0.4"
loguru = ">=0.7.3,<0.8"
python = "3.12.*"
hydra-core = ">=1.3.2,<2"
rich = ">=14.0.0,<15"
drawsvg = ">=2.4.0,<3"
kaggle = ">=1.6.17,<2"

[tool.pixi.feature.test.dependencies]
pytest = ">=8.4.0,<9"
pytest-cov = ">=6.1.1,<7"

[tool.pixi.feature.test.tasks]
test = "pytest"

[tool.pixi.feature.dev.dependencies]
pytest = ">=8.4.0,<9"
pytest-cov = ">=6.1.1,<7"
pre-commit = ">=4.2.0,<5"
pylint = ">=3.3.7,<4"

[tool.pixi.feature.dev.tasks]
lint = "pre-commit run --all-files"
pylint = "pylint jaxarc"

[tool.pixi.feature.docs.tasks]
docs-init = { cmd = "jupyter book init --write-toc", cwd = "docs" }
docs-serve = { cmd = "jupyter book start --execute", cwd = "docs" }
