[build-system]
requires = ["hatchling>=1.26", "hatch-vcs"]
build-backend = "hatchling.build"


[project]
name = "JaxARC"
authors = [{ name = "Aadam", email = "aadimator@gmail.com" }]
description = "MARL environment for ARC dataset in JAX"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Typing :: Typed",
]
dynamic = ["version"]
dependencies = []

[project.urls]
Homepage = "https://github.com/aadimator/JaxARC"
"Bug Tracker" = "https://github.com/aadimator/JaxARC/issues"
Discussions = "https://github.com/aadimator/JaxARC/discussions"
Changelog = "https://github.com/aadimator/JaxARC/releases"


[dependency-groups]
test = ["pytest >=6", "pytest-cov >=3"]
dev = [{ include-group = "test" }]
docs = ["jupyter-book>=2.0.0a3"]


[tool.hatch]
version.source = "vcs"
build.hooks.vcs.version-file = "src/jaxarc/_version.py"

[tool.hatch.envs.default]
# duplicate for now since hatch doesn't support groups yet
dependencies = []
scripts.test = "pytest {args}"


[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = [
  "error",
  "ignore::DeprecationWarning:jaxopt.*",
  "ignore:.*unzip2 was deprecated.*:DeprecationWarning",
]
log_cli_level = "INFO"
testpaths = ["tests"]


[tool.coverage]
run.source = ["jaxarc"]
report.exclude_also = ['\.\.\.', 'if typing.TYPE_CHECKING:']

[tool.mypy]
files = ["src", "tests"]
python_version = "3.9"
warn_unused_configs = true
strict = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
warn_unreachable = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = "jaxarc.*"
disallow_untyped_defs = true
disallow_incomplete_defs = true


[tool.ruff]

[tool.ruff.lint]
extend-select = [
  "ARG", # flake8-unused-arguments
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "EM",  # flake8-errmsg
  "EXE", # flake8-executable
  "G",   # flake8-logging-format
  "I",   # isort
  "ICN", # flake8-import-conventions
  "NPY", # NumPy specific rules
  "PD",  # pandas-vet
  "PGH", # pygrep-hooks
  "PIE", # flake8-pie
  "PL",  # pylint
  "PT",  # flake8-pytest-style
  "PTH", # flake8-use-pathlib
  "RET", # flake8-return
  "RUF", # Ruff-specific
  "SIM", # flake8-simplify
  "T20", # flake8-print
  "UP",  # pyupgrade
  "YTT", # flake8-2020
]
ignore = [
  "PLR09",   # Too many <...>
  "PLR2004", # Magic value used in comparison
]
isort.required-imports = ["from __future__ import annotations"]
# Uncomment if using a _compat.typing backport
# typing-modules = ["jaxarc._compat.typing"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["T20", "EM102", "PT011", "PT017", "ARG001", "ARG002", "ARG005", "F841"]
"noxfile.py" = ["T20"]
"notebooks/**" = ["T20", "PLC0415", "E402", "F841", "EM102", "UP035", "UP006", "RET504", "B018", "G004", "ARG002", "PT028", "RUF005"]
"examples/**" = ["T20", "PLC0415", "E402", "F841", "EM102", "NPY002", "G004", "EXE001", "ARG005"]



[tool.pylint]
py-version = "3.9"
ignore-paths = [".*/_version.py"]
reports.output-format = "colorized"
similarities.ignore-imports = "yes"
messages_control.disable = [
  "design",
  "fixme",
  "line-too-long",
  "missing-module-docstring",
  "missing-function-docstring",
  "wrong-import-position",
]
